# helpers_ps

./: .gitignore  404.html  CONTRIBUTING.md  Demo_Graphs.ipynb  Ejemplos.ipynb  Pruebas.ipynb  Pruebas_bbg.ipynb  README.md  curve.parquet  index.html  mkdocs.yml  objects.inv  pyproject.toml  realese_structure.txt  requirements-docs.txt  requirements.txt  sitemap.xml
.github/: CODEOWNERS
.github/workflows/: docs.yml  release.yml
Config/: var_globs.py
Grafico/: graf.py
Line/graph/: index.html
Line/tags/: index.html
Presentacion/: ppt_dicts.py  ppt_grafs.py  ppt_helpers.py
api/graph_mtplt/: index.html
api/helpers/: index.html
api_reference/: index.html
docs/: api_reference.md  getting_started.md  graph_bar.md  graph_box_whiskers.md  graph_line.md  graph_pie.md  index.md  quick_reference.md
docs/Line/: graph.md  tags.md
docs/api/: graph_mplt.md  graph_mtplt.md
docs/examples/: bar_stacked.md  box_whiskers.md  line_last_value.md
docs/images/: README.md
examples/bar_stacked/: index.html
examples/box_whiskers/: index.html
examples/line_last_value/: index.html
getting_started/: index.html
graph_bar/: index.html
graph_box_whiskers/: index.html
graph_line/: index.html
graph_pie/: index.html
helper_ps/Grafico/: graf.py
helper_ps/Presentacion/: ppt_grafs.py
helpers_ps.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
helpers_ps/Calculo/: helper_metricas.py  metricas.py
helpers_ps/Config/: var_globs.py
helpers_ps/Grafico/: graf.py  (+1 more)
quick_reference/: index.html
search/: search_index.json
site/: 404.html  index.html
(+15 files in other folders)
